--- a/Empathica.html
+++ b/Empathica.html
@@ -13,7 +13,7 @@
 
   <nav>
 
-    <a class="buttonNav" href="#aboutMe">
+    <a class="buttonNav" href="index.html">
       <div class="circle"></div>HOME
     </a>
 
