--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
 
   <section class="work">
     <div class="projectSmall cool-link">
-      <a href="#">
+      <a href="bikke.html">
         <img src="images/Bikke_mockup_Iphone.jpg" title="Proyecto 1">
         <h4>Bikke</h4>
         <p>DISEÑO DE PRODUCTO / UX/UI / BRANDING </p>
       </a>
     </div>
     <div class="projectSmall cool-link">
-      <a href="#">
+      <a href="Empathica.html">
         <img src="images/Project 2.jpg" title="Proyecto 1">
         <h4>Empathica</h4>
         <p>DISEÑO DE PRODUCTO / UX/UI / BRANDING</p>
